# placement-prep

./: README.md
Desktop/ai-feedback-dashboard/: docker-compose.yml
Desktop/ai-feedback-dashboard/backend/: CMakeLists.txt  Dockerfile  server.cpp
Desktop/ai-feedback-dashboard/frontend/: Dockerfile  app.js  index.html  styles.css
Desktop/codingnight/: ENHANCEMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  QUICKSTART.md  TROUBLESHOOTING.md  package-lock.json  package.json
Desktop/codingnight/src/app/: Dashboard.module.css  globals.css  layout.tsx  page.tsx
Desktop/codingnight/src/app/api/company-faqs/: route.ts
Desktop/codingnight/src/app/api/qa-feedback/: route.ts
Desktop/codingnight/src/app/api/questions/: route.ts
Desktop/codingnight/src/app/api/resume-polish/: route.ts
Desktop/codingnight/src/app/api/resumes/: route.ts
Desktop/codingnight/src/app/api/study-plan/: route.ts
Desktop/codingnight/src/app/auth/: Auth.module.css
Desktop/codingnight/src/app/mock-interview/: Mock.module.css  page.tsx
Desktop/codingnight/src/app/qa-generator/: QA-new.module.css  QA.module.css  page-new.tsx  page.tsx
Desktop/codingnight/src/app/resume/: Resume.module.css  page.tsx
Desktop/codingnight/src/app/study-path/: Study-new.module.css  Study.module.css  page-new.tsx  page.tsx
Desktop/codingnight/src/components/: Sidebar.module.css  Sidebar.tsx  Topbar.module.css  Topbar.tsx
Desktop/codingnight/src/lib/: auth.ts  gemini.ts  resume-utils.ts  store.ts  validation.ts
Desktop/codingnight/src/types/: index.ts
(+4 files in other folders)
